# simbay

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  Dockerfile  METRICS_TODO.md  Makefile  README.md  STATS.MD  colab_main.py  docker-compose.gpu.yml  docker-compose.mujoco-warp.yml  docker-compose.mujoco.yml  docker-compose.yml  main.py  pyproject.toml
assets/docs/: mjx_api.md
assets/franka_fr3_v2/: fr3_combined.xml  fr3v2.xml  props.xml  scene.xml
docs/: colab_mjx_100_particles.ipynb
logs/: Logs-2026-03-21 12_04_34.json
models/: fr3v2_hand.xml  fr3v2_nohand.xml  props.xml  scene.xml
monitoring/grafana/dashboards/: simbay-overview.json
monitoring/grafana/provisioning/dashboards/: simbay.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/loki/: config.yml
monitoring/prometheus/: prometheus.compose.yml  prometheus.local.yml
monitoring/promtail/: config.yml
notebooks/: simbay_mjx_colab.ipynb
scripts/: README.md  benchmark_particle_sweep.py  plot_gpu_profile.py  plot_mass_timeseries.py  plot_memory_profile.py  plot_particle_mass_estimation.py  plot_sensor_readings.py  plot_step_rate_profile.py  plot_utils.py  plot_vram_profile.py
src/estimation/: __init__.py  base.py  mjx_batch.py  mjx_filter.py  mjx_particle_filter.py  mujoco_particle_filter.py  particle_filter.py  warp_batch.py  warp_filter.py  warp_particle_filter.py
src/kinematics/: __init__.py  base.py  engines.py  ik_solver.py  mujoco_ik.py
src/planning/: __init__.py  franka_solver.py  trajectory.py
src/robots/: __init__.py  base.py  mujoco_robot.py  real_robot.py
src/utils/: __init__.py  constants.py  logging_utils.py  mass_timeseries.py  metrics.py  mjx_utils.py  mujoco_utils.py  plots.py  profiling.py  settings.py  tracing.py  workflow.py
