[tool.poetry]
package-mode = false
name = "simbay"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mujoco = "^3.6.0"
matplot = "^0.1.9"
mujoco-warp = { version = ">=0.0.2", optional = true }
warp-lang = { version = ">=1.11.1", optional = true }
nsight-python = { version = "*", optional = true }
opentelemetry-sdk = { version = "^1.25.0", optional = true }
opentelemetry-exporter-otlp-proto-grpc = { version = "^1.25.0", optional = true }
opentelemetry-api = "^1.25.0"

[tool.poetry.extras]
warp = ["mujoco-warp", "warp-lang"]
profiling = ["nsight-python"]
tracing = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
