[tool.poetry]
package-mode = false
name = "simbay"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mujoco = "^3.6.0"
matplot = "^0.1.9"
mujoco-warp = ">=0.0.2"
warp-lang = ">=1.11.1"
nsight-python = { version = "*", optional = true }
opentelemetry-sdk = { version = "^1.25.0", optional = true }
opentelemetry-exporter-otlp-proto-grpc = { version = "^1.25.0", optional = true }
opentelemetry-api = "^1.25.0"

[tool.poetry.extras]
profiling = ["nsight-python"]
tracing = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
