[tool.poetry]
package-mode = false
name = "simbay"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mujoco = "^3.6.0"
matplotlib = "^3.10.0"
mujoco-warp = ">=0.0.2"
warp-lang = ">=1.11.1"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.25.0"
opentelemetry-api = "^1.25.0"
prometheus-client = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "nsight-python",
]
